<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/shaun_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/shaun"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textSize="33sp"
        android:text="@string/President"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/President_description"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shaun_pic"
        android:layout_marginTop="20dp"
        android:text="@string/President_colon" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/Responsible_for" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="@string/Email"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/president_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/President_email"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />
</RelativeLayout>
