<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/james_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/james"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:textSize="33sp"
        android:text="@string/Historian"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/james_pic"
        android:layout_toEndOf="@+id/james_pic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/Historian_description"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/james_pic"
        android:layout_marginTop="20dp"
        android:text="@string/Historian_colon" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/Responsible_for" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="@string/Email"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/historian_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Historian_email"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />
</RelativeLayout>
