<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lia_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/lia"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textSize="33sp"
        android:text="@string/Treasurer"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lia_pic"
        android:layout_toEndOf="@+id/lia_pic"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:text="@string/Treasurer_description"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lia_pic"
        android:layout_marginTop="20dp"
        android:text="@string/Treasurer_colon" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/Responsible_for" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="@string/Email"
        android:layout_alignBaseline="@+id/treasurer_button"
        android:layout_alignBottom="@+id/treasurer_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/treasurer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Treasurer_email"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />
</RelativeLayout>
