<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sierra_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/sierra"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textSize="33sp"
        android:text="@string/Historian"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/sierra_pic"
        android:layout_toEndOf="@+id/sierra_pic"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="18dp"
        android:text="@string/Historian_description" />

    <TextView
        android:id="@+id/colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sierra_pic"
        android:layout_marginTop="20dp"
        android:text="@string/Historian_colon" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/Responsible_for" />

    <TextView
        android:id="@+id/email"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_alignBaseline="@+id/historian_button"
        android:layout_alignBottom="@+id/historian_button"
        android:layout_alignLeft="@+id/description"
        android:layout_alignStart="@+id/description"
        android:text="@string/Email" />

    <Button
        android:id="@+id/historian_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/email"
        android:layout_toRightOf="@+id/email"
        android:text="@string/Historian_email" />
</RelativeLayout>
